--- a/client/src/styles/AccountInfo.css
+++ b/client/src/styles/AccountInfo.css
@@ -1,4 +1,4 @@
-form {
+/* form {
   width: 100%;
   max-width: 330px;
   padding: 15px;
@@ -27,4 +27,4 @@ label {
   border-width: thin;
   border-color: black;
   border-radius: 25px;
-}
+} */
